--- a/package.json
+++ b/package.json
@@ -32,11 +32,9 @@
     "prettier": "^2.8.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "node": "16.16.0"
   },
   "devDependencies": {},
-  "engines": {
-    "node": "16.16.0",
-    "npm": "6.14.5"
-  }
+  "engines": {}
 }
