--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "webpack-cli": "^4.9.2",
     "node": "16.16.0"
   },
-  "devDependencies": {s
+  "devDependencies": {
   },
   "engines": {
     "node": "16.16.0",
